fixing spacing issues on landing

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -64,9 +64,19 @@ body{
   align-items: center;
 }
 
+.action{
+	width: 6vw;
+	height: 3vw;
+	color: $darkgray;
+	background-color: $green;
+	border-radius: 15%;
+}
 
-
-
+.more-info{
+  flex-direction: row;
+  justify-content: space-around;
+  width: 800px;
+}
 
 .holders{
   display: flex;
@@ -74,6 +84,9 @@ body{
   width: 100%
 }
 
+.infoTip{
+  width: 30%;
+}
 
 .active{
   display: flex;
